--- a/main.html
+++ b/main.html
@@ -9,8 +9,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-   <p><b>My intro to Git and colab</b>
-   </p>
+   <div>
+	<p><b>My intro to Git and colab</b>
+   </p></div>
 	<script type="text/javascript" src="./script.js">
 </script>
 
