--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-   <div>
-	<p><b>My intro to Git and colab</b>
-   </p></div>
+   
+	<p><b>"My intro to Git and colab"</b>
+   </p>
 	<script type="text/javascript" src="./script.js">
 </script>
 
